--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,12 +48,11 @@
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
     <!-- Add the following purpose strings -->
-   <key>NSPhotoLibraryUsageDescription</key>
-<string>This app allows users to edit their profile pictures.</string>
-<key>NSMicrophoneUsageDescription</key>
-<string>This app requires access to the microphone to record voice for transcription purposes.</string>
- <string>Your purpose for accessing the microphone</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app allows users to edit their profile pictures. So user can select from gallery to set its profile picture.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to the microphone to record voice for transcription purposes.</string>
     <key>NSCameraUsageDescription</key>
-    <string>User can take a picture to set it profile picture thats why app need camera access</string>
+    <string>This app allows users to edit their profile pictures. So user can took a selfi by using camera to set its profile picture.</string>
 </dict>
 </plist>
